model object and entities for items and users added

--- a/exchange-app-backend/src/main/resources/application.properties
+++ b/exchange-app-backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=exchange-app
+spring.datasource.url=jdbc:postgresql://localhost:5432/exchange_app_db
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
