Implemented user registration and login

--- a/exchange-app-backend/src/main/resources/application.properties
+++ b/exchange-app-backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=exchange-app
-spring.datasource.url=jdbc:postgresql://localhost:5432/exchange_app_db
-spring.datasource.username=user
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/exchange_db
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
