--- a/exchange-app-backend/src/main/resources/application.properties
+++ b/exchange-app-backend/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+spring.servlet.multipart.file-size-threshold=2KB
+
+
+
