Added item deletion functionality

--- a/exchange-app-backend/src/main/resources/application.properties
+++ b/exchange-app-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=exchange-app
 spring.datasource.url=jdbc:postgresql://localhost:5432/exchange_db
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=postgres
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
