--- a/exchange-app-frontend/package.json
+++ b/exchange-app-frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "event-source-polyfill": "^1.0.31",
+    "jwt-decode": "^4.0.0",
     "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
