--- a/exchange-app-backend/src/main/resources/application.properties
+++ b/exchange-app-backend/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=exchange-app
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/exchange_db
+spring.datasource.url=jdbc:postgresql://db:5432/exchange_db
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=none
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
